Fix app title being slightly cut off

--- a/client/css/_app.scss
+++ b/client/css/_app.scss
@@ -126,6 +126,7 @@ md-sidenav {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  line-height: 24px;
 }
 
 
